--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bricks-frontend",
+  "name": "web3-fractional-real-estate-angular",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
